# scalapack

./: .gitignore  .gitmodules  CMakeLists.old  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  README  README.md  VERSION  azure-pipelines.yml  meson.build  meson_options.txt  options.cmake  setup.cmake
.github/workflows/: ci.yml  ci_linux.yml  ci_macos.yml
BLACS/SRC/: CMakeLists.old  CMakeLists.txt  meson.build
CMAKE/: SCALAPACKConfig.cmake.in  compilers.cmake  install.cmake  lapack.cmake  lapack_external.cmake  libraries.cmake  libraries.json  libraries.txt  mpi.cmake  options.cmake  policy.cmake
CMAKE/Modules/: FindLAPACK.cmake
EXAMPLE/: CMakeLists.txt
PBLAS/SRC/: CMakeLists.old  CMakeLists.txt  meson.build
PBLAS/SRC/PBBLAS/: CMakeLists.txt  meson.build
PBLAS/SRC/PTOOLS/: CMakeLists.txt  meson.build
PBLAS/SRC/PTZBLAS/: meson.build
REDIST/SRC/: CMakeLists.txt  meson.build
SRC/: CMakeLists.txt  bdlaapp.f  bslaapp.f  meson.build  pcgeqpf.f  pcheevd.f  pdgeqpf.f  psgeqpf.f  pzgeqpf.f  pzheevd.f
TOOLS/: CMakeLists.old  CMakeLists.txt  meson.build
TOOLS/LAPACK/: CMakeLists.txt  meson.build
archive/: azure-pipelines.yml
blacs/src/: CMakeLists.txt
cmake/: .cpack_ignore  Config.cmake.in  GitSubmodule.cmake  blacs.cmake  compilers.cmake  config.cmake.in  get_scalapack.cmake  install.cmake  lapack.cmake  libraries.cmake  libraries.json  options.cmake  pbblas.cmake  pblas.cmake  ptools.cmake  ptzblas.cmake  redist.cmake  scalapack_src.cmake  src.cmake  tools.cmake  tools_lapack.cmake
cmake/Modules/: FindLAPACK.cmake  FindSCALAPACK.cmake
cmake/abi_check/: CMakeLists.txt  main.c  main.f90
example/: CMakeLists.txt  test_pdgesv.f  test_pdsyev.f  test_pssyev.f
example/other_project/: CMakeLists.txt
pblas/src/: CMakeLists.txt
pblas/src/pbblas/: CMakeLists.txt
pblas/src/ptools/: CMakeLists.txt
pblas/src/ptzblas/: CMakeLists.txt
redist/src/: CMakeLists.txt
scripts/: CMakeLists.txt  test_shared.cmake
src/: CMakeLists.txt
subprojects/: lapack.wrap
test/: CMakeLists.txt  blacs_helloworld.f90  example1.f  test_scalapack_d.f90
tests/: CMakeLists.txt  example1.F  example1.f  test_pdgetrf.f90  test_scalapack_d.f90
tools/: CMakeLists.txt
tools/lapack/: CMakeLists.txt
