option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK', yield: true)
option('MPI_ROOT', type : 'string', description : 'root directory of MPI', yield: true)
option('arith', type: 'string', value: 'sd', description: 'precision (s,d,c,z)', yield: true)
option('system_blas', type: 'boolean', value: false, description: 'use system libraries', yield: true)