allaux = files('pgemraux.c')
imrsrc = files('pigemr.c', 'pigemr2.c', 'pitrmr.c', 'pitrmr2.c')
smrsrc = files('psgemr.c', 'psgemr2.c', 'pstrmr.c', 'pstrmr2.c')
cmrsrc = files('pcgemr.c', 'pcgemr2.c', 'pctrmr.c', 'pctrmr2.c')
dmrsrc = files('pdgemr.c', 'pdgemr2.c', 'pdtrmr.c', 'pdtrmr2.c')
zmrsrc = files('pzgemr.c', 'pzgemr2.c', 'pztrmr.c', 'pztrmr2.c')
redist = [allaux, imrsrc, smrsrc, cmrsrc, dmrsrc, zmrsrc]
